[gd_scene format=3 uid="uid://dip7l8ntmfd5f"]

[ext_resource type="Script" uid="uid://c6ibt0o3nj6q5" path="res://Scripts/attack_area.gd" id="1_j6b0y"]

[node name="AttackArea" type="Area2D" unique_id=150417490]
script = ExtResource("1_j6b0y")

[node name="AttackTimer" type="Timer" parent="." unique_id=2102092167]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
